# temo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp  tests.cpp
src/core/: core.cpp  core.h  subcore.cpp  subcore.h
src/core/model/: Movie.h
src/core/plugins/: plugindefinition.h
src/core/repository/: movierepository.h  repositoryfactory.h
src/core/repository/mongo/: mongomovierepository.cpp  mongomovierepository.h  mongorepositoryfactory.cpp  mongorepositoryfactory.h
src/core/subcores/: subcore.h  type.h
src/core/subcores/movie/: moviesubcore.cpp  moviesubcore.h
src/core/subcores/music/: musicsubcore.cpp  musicsubcore.h
src/core/subcores/serie/: seriessubcore.h.autosave  seriesubcore.cpp  seriesubcore.h
src/tests/: coretest.cpp  maintests.cpp
